// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostCard normal 1`] = `
<article class="card">
  <div class="card-image"><a>
      <div aria-labelledby="__test__title" aria-describedby="__test__description" class="image-2by1 has-background-light no-image has-text-secondary">
        <!---->
      </div>
    </a></div>
  <div class="card-content">
    <div class="content">
      <h3 id="__test__title" class="title is-5"><a>
          title
        </a></h3>
      <h4 class="subtitle is-6 has-text-secondary"><small>
          2020/04/05
        </small></h4>
      <p id="__test__description">
        excerpt
      </p>
    </div>
  </div>
</article>
`;

exports[`PostCard with feature image 1`] = `
<article class="card">
  <div class="card-image"><a>
      <div aria-labelledby="__test__title" aria-describedby="__test__description" class="image-2by1"><img src="feature_image.png" alt="" class="image-2by1-inner"></div>
    </a></div>
  <div class="card-content">
    <div class="content">
      <h3 id="__test__title" class="title is-5"><a>
          title
        </a></h3>
      <h4 class="subtitle is-6 has-text-secondary"><small>
          2020/04/05
        </small></h4>
      <p id="__test__description">
        excerpt
      </p>
    </div>
  </div>
</article>
`;
